# messenger-qt

./: .gitignore  CMakeLists.txt  README.md
include/messenger/: app-info.hpp  app-info.hpp.in
include/messenger/ui/: dialog_page.hpp  dialog_window.hpp  main_window.hpp  main_windows.hpp  menubar.hpp  popup_page.hpp  webengine_page.hpp  webengine_profile.hpp  webengine_view.hpp
include/messenger/ui/menu/: filemenu.hpp  helpmenu.hpp
include/messenger/ui/widget/: download_item.hpp
include/messenger/ui/window/: downloads_window.hpp
src/: main.cpp
src/ui/: dialog_page.cpp  dialog_window.cpp  main_window.cpp  menubar.cpp  popup_page.cpp  webengine_page.cpp  webengine_profile.cpp  webengine_view.cpp
src/ui/menu/: filemenu.cpp  helpmenu.cpp
src/ui/widget/: download_item.cpp
src/ui/window/: downloads_window.cpp
